# grammr

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  Taskfile.yaml  config.yaml  openapi.json  package.json  pnpm-lock.yaml  pom.xml
.github/workflows/: build.yml  build_anki_exporter.yaml  build_core.yaml  build_inflection_ru.yaml  build_morphology.yaml  build_multi_inflection.yaml  build_service.yml  build_sidecar.yml  deploy.yml  deploy_anki.yaml  deploy_core.yml  deploy_core_prod.yml  deploy_inflection_ru.yaml  deploy_morphology.yaml  deploy_morphology_serverless.yaml  deploy_multi_inflection.yaml  deploy_serverless.yaml  lint.yml  pr.yaml  rollback_core.yml  swagger_docs.yaml
charts/anki-exporter/: README.md
charts/anki-sync-server/: Chart.yaml  values.yaml
charts/db-util/: Chart.yaml  values.yaml
charts/grammr/: Chart.yaml  README.md  values.yaml
charts/grammr-morphology/: Chart.yaml  values.yaml
charts/inflection-ru/: Chart.yaml  README.md  values.yaml
charts/lingolift-core/: Chart.yaml  values.yaml
charts/morphology/: Chart.yaml  values.yaml
charts/multi-inflection/: Chart.yaml  README.md  values.yaml
charts/rabbitmq/: values.yaml
charts/sidecar-analysis/: Chart.yaml  values.yaml
charts/values/: grammr-values.yaml  grammr.values.yaml  postgres-values.yaml
docs/reference/: clerk.md  config.md  grammr-architecture.drawio  inflections.md  serverless-morphology.md
environments/dev/: core.values.yaml  morphology.values.yaml  multi-inflection.values.yaml  postgres.values.yaml  sync-server.values.yaml
environments/prod/: core.values.yaml  multi-inflection.values.yaml  postgres.values.yaml  sync-server.values.yaml
examples/single-language/: README.md
frontend/: .gitignore  Dockerfile  README.md  components.json  entrypoint.sh  eslint.config.mjs  jest.config.js  next.config.js  package.json  pnpm-lock.yaml  publishable-keys  tailwind.config.ts  validate-env.js
frontend/src/: middleware.ts
grammr-ui/: .gitrepo  README.md  next-sitemap.config.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json
grammr-ui/src/: middleware.ts  util.ts
grammr-ui/terraform/: .terraform.lock.hcl  environment.tf  main.tf  project.tf  variables.tf
lifecycle/: benchmark.sh  common.sh  integration-test.sh  qa.sh  run.sh
local/: README.md  definitions.json  docker-compose.yaml  nginx.conf
local/data/: data.sql  paradigms.sql
local/expectations/: earendil.txt  expectation.json  responses.json  set_expectations.py
microservice/anki-exporter/: README.md
microservice/inflection-ru/: pyproject.toml
scripts/: benchmark.sh  common.sh  integration-test.sh  qa.sh  run.sh
sidecars/analysis/: Dockerfile  pyproject.toml
sidecars/analysis/analysis/: main.py
sidecars/analysis/analysis/domain/: analysis.py  analysis_request.py  grammatical_analysis.py  morphological_analysis.py
sidecars/analysis/analysis/service/: analysis_service.py  feature_extraction.py  model_service.py  token_mapper.py
sidecars/analysis/docker/: Dockerfile  download_models.py  init.sh
sidecars/analysis/test/: test_feature_extraction.py
sidecars/anki/: README.md  pyproject.toml
sidecars/anki-exporter/: pyproject.toml
sidecars/anki-sync/: pyproject.toml
sidecars/anki-sync/docker/: Dockerfile  init.sh
sidecars/anki/anki/: main.py
sidecars/anki/anki/domain/: deck.py
sidecars/anki/docker/: Dockerfile
sidecars/inflection-de/: pyproject.toml
sidecars/inflection-de/docker/: init.sh
sidecars/inflection-de/inflection/: main.py
sidecars/inflection-de/inflection/domain/: inflection.py
sidecars/inflection-de/inflection/service/: feature_provider.py  inflector.py
sidecars/inflection-de/test/: test_feature_provider.py  test_integration.py
sidecars/inflection-multi/: README.md  pyproject.toml
sidecars/inflection-ru/: README.md  pyproject.toml
sidecars/inflection-ru/docker/: Dockerfile  init.sh
sidecars/inflection-ru/inflection/: main.py
sidecars/inflection-ru/inflection/domain/: feature.py  inflection.py  inflection_request.py
sidecars/inflection-ru/inflection/service/: feature_retriever.py  inflector.py
sidecars/inflection-ru/inflection/test/: test_feature_retriever.py  test_inflector.py  test_integration.py
sidecars/inflection-ru/test/: test_feature_retriever.py  test_stringification.py
sidecars/morphology/: pyproject.toml
sidecars/morphology/analysis/: event_receiver.py  lambda_util.py  main.py  nlp_lambda_handlers.py
sidecars/morphology/analysis/service/: analysis_service.py  feature_extraction.py  model_service.py
sidecars/morphology/docker/: Dockerfile  image_generation_helper.py  init.sh  lambda.Dockerfile
sidecars/morphology/morphology/: lambda_handler.py  lambda_util.py  main.py
sidecars/morphology/morphology/domain/: analysis_request.py  morphological_analysis.py
sidecars/morphology/morphology/service/: analysis_service.py
sidecars/morphology/test/: test_feature_extraction.py  test_parsing.py
sidecars/multi-inflection/: README.md  pyproject.toml
sidecars/multi-inflection/docker/: init.sh
sidecars/multi-inflection/inflection/: lambda_handler.py  main.py
sidecars/multi-inflection/inflection/domain/: inflection_request.py
sidecars/multi-inflection/inflection/service/: feature_retriever.py  inflector.py
sidecars/multi-inflection/test/: test_inflector.py
terraform/: .terraform.lock.hcl  README.md  api_gateway.tf  ecr.tf  helm.tf  lambda.tf  local.tf  provider.tf  secrets.tf  variables.tf
terraform/application/: .terraform.lock.hcl  api_gateway.tf  data.tf  lambda.tf  local.tf  main.tf  monitoring.tf  outputs.tf  provider.tf  sidecars.tf  variables.tf
terraform/config/: local.config  (+1 more)
(+929 files in other folders)
