[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
spacy = "3.7.0"
uvicorn = "^0.32.0"
fastapi = "^0.115.4"
pika = "^1.3.2"

# Sensitive Cython dependencies that need to be pinned due to cross-system compilation issues
thinc = "8.2.4"
numpy = "1.26.4"
cymem = "2.0.8"
murmurhash = "1.0.10"

[tool.poetry.group.dev]
optional = true

# testing, linting, utilities
[tool.poetry.group.dev.dependencies]
pip = "^23.3.2"
mypy = "^1.8.0"
pytest = "^7.4.4"
black = "^24.10.0"
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0.tar.gz" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.4.4"
addopts = "-s -v --disable-warnings"
testpaths = [
  "test",
]
