[tool.poetry]
name = "morphology"
version = "0.4.2"
description = ""
authors = ["Tobias Waslowski <tobiaswaslowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# todo: i know this was required for SOME compatibility reasons. figure out the specifics.
spacy = "3.7.0"

# Sensitive Cython dependencies that need to be pinned due to cross-system compilation issues
thinc = "8.2.4"
numpy = "1.26.4"
cymem = "2.0.8"
murmurhash = "1.0.10"

[tool.poetry.group.webserver]
optional = true

[tool.poetry.group.webserver.dependencies]
uvicorn = "^0.32.0"
fastapi = "^0.115.4"

[tool.poetry.group.dev]
optional = true

# testing, linting, utilities
[tool.poetry.group.dev.dependencies]
pip = "^23.3.2"
mypy = "^1.8.0"
pytest = "^8.3.5"
black = "^24.10.0"
de-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.7.0/de_core_news_sm-3.7.0.tar.gz" }
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.3.5"
addopts = "-s -v --disable-warnings"
testpaths = [
  "test",
]
env = [
  "SPACY_MODEL=de_core_news_sm",
]
